--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode7.3
-language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
-script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/RxRetroSwift.xcworkspace -scheme RxRetroSwift-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+{
+  "osx_image": "xcode9.2",
+  "language": "swift",
+  "cache": "cocoapods",
+  "podfile": "Example/Podfile",
+  "before_install": [
+    "gem install cocoapods"
+  ],
+  "script": [
+    "pod lib lint --allow-warnings"
+  ],
+  "os": "osx"
+}
