--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,11 +2,12 @@ use_frameworks!
 
 target 'RxRetroSwift_Example' do
   pod 'RxRetroSwift', :path => '../'
-
+  
   target 'RxRetroSwift_Tests' do
     inherit! :search_paths
-
+    
     pod 'Quick', '~> 1.2.0'
-  pod 'Nimble', '~> 7.0.2'
+    pod 'RxNimble'
   end
 end
+
