--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
-{
-  "osx_image": "xcode9.2",
-  "language": "swift",
-  "cache": "cocoapods",
-  "podfile": "Example/Podfile",
-  "before_install": [
-    "gem install cocoapods"
-  ],
-  "script": [
-    "pod lib lint --allow-warnings"
-  ],
-  "os": "osx"
-}
+osx_image: xcode9.2
+language: objective-c
+jobs:
+  include:
+    - stage: testing
+      before_install:
+        - gem install cocoapods
+      script: 
+        - cd Example
+        - pod install
+        - xcodebuild test -workspace RxRetroSwift.xcworkspace -scheme RxRetroSwift-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8'
+    - stage: deploy to cocoapods
+      before_install:
+        - gem install cocoapods
+      script:
+        - pod lib lint --allow-warnings
+        - pod trunk push
+      only:
+        tags: true
