--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ jobs:
       script: 
         - cd Example
         - pod install
-        - xcodebuild test -workspace RxRetroSwift.xcworkspace -scheme RxRetroSwift-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8'
+        - xcodebuild test -workspace RxRetroSwift.xcworkspace -scheme RxRetroSwift-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8' -quiet
     - stage: deploy to cocoapods
       before_install:
         - gem install cocoapods
       script:
         - pod lib lint --allow-warnings
         - pod trunk push
-      on:
-        tags: true
-        condition: "$TRAVIS_TAG =~ ^[0-9].[0-9].[0-9]$"
+      branches:
+        only:
+          - /^\d+\.\d+(\.\d+)?(-\S*)?$/
