tag-based versioning

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ jobs:
         - pod install
         - xcodebuild test -workspace RxRetroSwift.xcworkspace -scheme RxRetroSwift-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8' -quiet
     - stage: deploy to cocoapods
+      env:
+        - RXRETROFIT_VERSION=$TRAVIS_TAG
       before_install:
         - gem install cocoapods
       script:
