try using export instead of env key.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ jobs:
         - pod install
         - xcodebuild test -workspace RxRetroSwift.xcworkspace -scheme RxRetroSwift-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8' -quiet
     - stage: deploy to cocoapods
-      env:
-        - RXRETROFIT_VERSION=$TRAVIS_TAG
       before_install:
+        - echo $TRAVIS_TAG
+        - export RXRETROFIT_VERSION=$TRAVIS_TAG
         - gem install cocoapods
       script:
         - pod lib lint --allow-warnings
