Features/swift package manager (#5)
* just return httpResponse

* Refactor, added URLSessionConfiguration as initializer parameter and added RawResponse model.

* update Example

* update gitignore for swift

* added swift package manager support

* update Example

* just ignore the swift package test for now

* update .travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ jobs:
         - cd Example
         - pod install
         - xcodebuild test -workspace RxRetroSwift.xcworkspace -scheme RxRetroSwift-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8' -quiet
+    - stage: swift package manager
+      script:
+        - swift build
     - stage: deploy to cocoapods
       before_install:
         - echo $TRAVIS_TAG
